--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/cli-debugger-ui": "^10.0.0",
     "@reduxjs/toolkit": "^1.8",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-devtools": "^4.27.2",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.8",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
